@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.2.15 unreleased
+
+* use appropriate specs and features when 'fabrication' is selected (contributed by Taylor Mock)
+
 h2. 2.2.14 October 11, 2012
 
 * fix errors for rails-prelaunch-signup app
